--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <hr />
       <div class="skills">
         <h2>My Projects.</h2>
+        <h4> Click on them to visit </h4>
         <div class="skill-row">
           <a href="https://tindog.manishteotia10.now.sh/"><img class="project-image-left" src="tin dog.png"  alt="tin dog project"></a>
           <h3>Tin Dog</h3>
