--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p class="copyright">© 2018 Manish Teotia.@FreeLancer</p>
+      <a class="footer-link" href="https://www.facebook.com/manish.teotia.146/">Facebook</a>
+      <a class="footer-link" href="manishteotia10@gmail.com">Gmail</a>
+      <a class="footer-link" href="https://projectable-cv.manishteotia10.vercel.app/">Website</a>
+      <p class="copyright">© 2020 Manish Teotia</p>
     </div>
 
 
