--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <a class="footer-link" href="https://vercel.com/manishteotia10">Vercel</a>
       <a class="footer-link" href="https://www.facebook.com/manish.teotia.146">Facebook</a>
       <a class="footer-link" href="https://github.com/manishteotia10">Github</a>
-      <p class="copyright">© 2018 Manish Teotia.@FreeLancer</p>
+      <p class="copyright">© 2020 Manish Teotia</p>
     </div>
 
 
