--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <a class="nav-link" href="#skill-scroll">Skills</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#project">Projects</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
@@ -76,7 +79,7 @@
 
 
       <hr />
-      <div class="skills">
+      <div class="skills" id="project">
         <h2>My Projects.</h2>
         <div class="skill-row">
           <a href="https://tindog.manishteotia10.now.sh/"><img class="project-image-left" src="tin dog.png"  alt="tin dog project"></a>
